--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -328,13 +328,14 @@ for(mode in c("ext","int")){
     loss <- 100*loss/loss$mean
   
     # average over 10 different seeds
-    all <- mean <- sd <- pvalue <- matrix(NA,nrow=max(number),ncol=length(loss.var),dimnames=list(1:max(number),loss.var))
+    both <- mean <- sd <- p.better <- p.worse <- matrix(NA,nrow=max(number),ncol=length(loss.var),dimnames=list(1:max(number),loss.var))
     for(i in 1:max(number)){
       for(j in seq_along(loss.var)){
         cond <- number==i
         x <- loss$glmnet[cond]
         y <- loss[[loss.var[j]]][cond]
-        pvalue[i,j] <- stats::wilcox.test(x=x,y=y,paired=TRUE,alternative="greater",exact=FALSE)$p.value
+        p.better[i,j] <- stats::wilcox.test(x=x,y=y,paired=TRUE,alternative="greater",exact=FALSE)$p.value
+        p.worse[i,j] <- stats::wilcox.test(x=x,y=y,paired=TRUE,alternative="less",exact=FALSE)$p.value
         mean[i,j] <- mean(y)
         sd[i,j] <- sd(y)
         info$cor.x[i] <- mean(frame$cor.x[cond])
@@ -342,103 +343,48 @@ for(mode in c("ext","int")){
       }
     }
     
-    all[] <- paste0(format(round(mean,digits=1))," $\\pm$",format(round(sd,digits=1)))
+    front <- format(round(mean,digits=1),trim=TRUE)
+    front.nchar <- nchar(front)
+    back <- format(round(sd,digits=1),trim=TRUE)
+    back.nchar <- nchar(back)
+    
+    both[] <- paste0(front,"$\\pm$",back)
+    
     grey <- mean>=mean[,"glmnet"]
-    all[grey] <- paste0("\\textcolor{gray}{",all[grey],"}")
+    both[grey] <- paste0("\\textcolor{gray}{",both[grey],"}")
+    
     min <- cbind(seq_len(max(number)),apply(mean,1,which.min))
-    all[min] <- paste0("\\underline{",all[min],"}")
-    all <- gsub(pattern=" ",replacement="\\\\phantom{1}",x=all) # trial
-    star <- pvalue<=0.05
-    all[star] <- paste0(all[star],"*")
-    all[!star] <- paste0(all[!star],"\\phantom{*}")
+    both[min] <- paste0("\\underline{",both[min],"}")
+
+    star <- p.better<=0.05
+    both[star] <- paste0(both[star],"*")
+    #both[!star] <- paste0(both[!star],"\\phantom{*}") 
     
-   #  loss <- all
-   #  quote <- matrix(NA,nrow=nrow(loss),ncol=ncol(loss))
-   #  quote[1,] <- FALSE
-   #  quote[2,] <- loss[1,]==loss[2,] & loss[1,]==loss[3,] & loss[1,]==loss[4,]
-   # quote[3,] <- loss[2,]==loss[3,] & loss[3,]==loss[4,] & loss[4,]==loss[5,]
-   #   for(i in 4:(nrow(loss)-2)){
-   #     quote[i,] <- (loss[i,]==loss[i-1,] & loss[i,]==loss[i-2,] & loss[i,]==loss[i-3,]) | 
-   #     (loss[i,]==loss[i-1,] & loss[i,]==loss[i+1,] & loss[i,]==loss[i+2,])
-   # }
-   # quote[nrow(quote),] <- loss[nrow(quote),]==loss[nrow(quote)-1,] &
-   #         loss[nrow(quote),]==loss[nrow(quote)-2,] &
-   #         loss[nrow(quote),]==loss[nrow(quote)-3,]
-   
-   
+    dagger <- p.worse<=0.05
+    both[dagger] <- paste0(both[dagger],"$\\dagger$")
+    both[!star & !dagger] <- paste0(both[!star & !dagger],"\\phantom{*}") 
     
-        external <- "number of transferable source data sets ($K_a$), differences between source and target coefficients ($h$), dense setting with ridge regularisation ($s=50$, $\\alpha=0$) or sparse setting with lasso regularisation ($s=15$, $\\alpha=1$), family of distribution (`gaussian' or `binomial')."
+    both[front.nchar==3] <- paste0("$~$",both[front.nchar==3])
+    both[back.nchar==3] <- paste0(both[back.nchar==3],"$~$")
+    
+    external <- "number of transferable source data sets ($K_a$), differences between source and target coefficients ($h$), dense setting with ridge regularisation ($s=50$, $\\alpha=0$) or sparse setting with lasso regularisation ($s=15$, $\\alpha=1$), family of distribution (`gaussian' or `binomial')."
     internal <- "correlation parameter for features ($\\rho_x$), correlation parameter for coefficients ($\\rho_{\\beta}$), dense setting with ridge regularisation ($\\pi=20\\%$, $\\alpha=0$) or sparse setting with lasso regularisation ($\\pi=5\\%$, $\\alpha=1$), family of distribution (`gaussian' or `binomial')."
-    caption <- paste0("Testing loss in ",mode,"ernal simulation, as a percentage of the one from prediction by the mean. Settings: ",ifelse(mode=="ext",external,ifelse(mode=="int",internal,NULL))," These parameters determine (i) the average Pearson correlations among the features in the target data set ($\\bar{\\rho}_x$) and (ii) the maximum Pearson correlation between the coefficients in the target data set and the coefficients in the source data sets ($\\max(\\hat{\\rho}_{\\beta})$). Methods: regularised regression (\\texttt{glmnet}), competing transfer learning method (\\texttt{glmtrans}), proposed transfer learning method (\\texttt{transreg}) with exponential/isotonic calibration and standard/simultaneous stacking. In each setting, the colour black highlights methods that are more predictive than regularised regression without transfer learning (\\texttt{glmnet}), and an underline highlights the most predictive method. \\label{sim_",mode,"}")
+    caption <- paste0("\\textcolor{blue}{\\sout{Testing loss in ",mode,"ernal simulation, as a percentage of the one from prediction by the mean.} Predictive performance in ",mode,"ernal simulation. In each setting (row), we simulate $10$ data sets, calculate the performance metric (mean-squared error for numerical prediction, logistic deviance for binary classification) for the test sets, express these metrics as percentages of those from prediction by the mean, and show the mean and standard deviation of these percentages.} Settings: ",ifelse(mode=="ext",external,ifelse(mode=="int",internal,NULL))," These parameters determine (i) the \\textcolor{blue}{\\sout{average} mean} Pearson correlation\\textcolor{blue}{\\sout{s}} among the features in the target data set ($\\bar{\\rho}_x$) and (ii) the maximum Pearson correlation between the coefficients in the target data set and the coefficients in the source data sets ($\\max(\\hat{\\rho}_{\\beta})$). Methods: regularised regression (\\texttt{glmnet}), competing transfer learning method (\\texttt{glmtrans}), proposed transfer learning method (\\texttt{transreg}) with exponential/isotonic calibration and standard/simultaneous stacking. In each setting, the colour\\textcolor{blue}{s} black\\textcolor{blue}{/grey} highlight\\textcolor{blue}{\\sout{s}} methods that are more\\textcolor{blue}{/less} predictive than regularised regression without transfer learning (\\texttt{glmnet}), \\textcolor{blue}{asterisks/daggers indicate methods that are significantly more/less predictive at the 5\\% level (one-sided Wilcoxon signed-rank test),} and an underline highlights the most predictive method. \\label{sim_",mode,"}")
     
     colnames(info) <- sapply(colnames(info),function(x) switch(x,"Ka"="$K_a$","K"="$K$","h"="$h$","alpha"="$\\alpha$","rho.x"="$\\rho_x$","rho.beta"="$\\rho_\\beta$","cor.x"="$\\bar{\\rho}_{x}$","cor.beta"="$\\max(\\hat{\\rho}_{\\beta})$","cor.t"="$\\bar{\\rho}_{a}$",x))
-    colnames(all) <- paste0("\\texttt{",colnames(all),"}")
+    colnames(both) <- paste0("\\texttt{",colnames(both),"}")
     
-    align <- paste0("|r|",paste0(rep("r",times=ncol(info)),collapse=""),"|",paste0(rep("r",times=ncol(all)),collapse=""),"|")
-    xtable <- xtable::xtable(x=cbind(info,all),align=align,caption=caption)
+    align <- paste0("|r|",paste0(rep("c",times=ncol(info)),collapse=""),"|",paste0(rep("c",times=ncol(both)),collapse=""),"|")
+    xtable <- xtable::xtable(x=cbind(info,both),align=align,caption=caption)
     xtable::print.xtable(x=xtable,
                 include.rownames=FALSE,
                 floating=TRUE,
                 sanitize.text.function=identity,
                 comment=FALSE,
                 caption.placement="top",
-                size="\\small",
+                size="\\small \\setlength{\\tabcolsep}{3pt}",
                 file=paste0(dir,"/manuscript/table_",mode,".tex"))
-    
-  }
-  
-# .table <- function(loss,info=NULL,hline=NULL,pvalue=NULL,caption="",file=""){
-#   loss[is.na(loss)] <- Inf
-#   
-#   if(nrow(loss)>5){
-#   quote <- NA*loss
-#   quote[1,] <- FALSE
-#   quote[2,] <- loss[1,]==loss[2,] & loss[1,]==loss[3,] & loss[1,]==loss[4,]
-#   quote[3,] <- loss[2,]==loss[3,] & loss[3,]==loss[4,] & loss[4,]==loss[5,]
-#   for(i in 4:(nrow(loss)-1)){
-#     quote[i,] <- (loss[i,]==loss[i-1,] & loss[i,]==loss[i-2,] & loss[i,]==loss[i-3,]) | 
-#       (loss[i,]==loss[i-1,] & loss[i,]==loss[i+1,] & loss[i,]==loss[i+2,])
-#   }
-#   quote[nrow(quote),] <- loss[nrow(quote),]==loss[nrow(quote)-1,] &
-#           loss[nrow(quote),]==loss[nrow(quote)-2,] &
-#           loss[nrow(quote),]==loss[nrow(quote)-3,]
-#   }
-#   
-#   loss <- round(loss,digits=3)
-#    
-#   min <- cbind(seq_len(nrow(loss)),apply(loss,1,which.min))
-#   pos <- loss >= 0
-#   leq <- loss >= loss[,"glmnet"]
-#   loss <- format(round(loss,digits=3),digits=3)
-#   if(nrow(loss)>5){loss[quote==1] <- "\""}
-#   loss[leq] <- paste0("\\textcolor{gray}{",loss[leq],"}")
-#   loss[min] <- paste0("\\underline{",loss[min],"}")
-#   loss[pos] <- paste0("~",loss[pos])
-#   colnames(loss) <- paste0("\\texttt{",colnames(loss),"}")
-#   rownames(loss) <- paste0("\\textsc{",tolower(rownames(loss)),"}")
-#   
-#   if(is.null(info)){
-#     table <- loss
-#     align <- paste0("|r|",paste0(rep("r",times=ncol(loss)),collapse=""),"|")
-#     include.rownames <- TRUE
-#   } else {
-#     info[is.na(info)] <- "-"
-#     table <- cbind(info,loss)
-#     align <- paste0("|r|",paste0(rep("r",times=ncol(info)),collapse=""),"|",
-#                     paste0(rep("r",times=ncol(loss)),collapse=""),"|")
-#     include.rownames <- FALSE
-#   }
-#   xtable <- xtable::xtable(x=table,caption=caption,align=align)
-#   xtable::print.xtable(x=xtable,
-#                        sanitize.text.function=identity,
-#                        include.rownames=include.rownames,
-#                        floating=TRUE,
-#                        comment=FALSE,
-#                        hline.after=c(-1,0,hline,nrow(table)),
-#                        caption.placement="top",
-#                        file=file)
-# }
-
+}
 ```
 
 
