add example for computation time

--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -387,6 +387,27 @@ for(mode in c("ext","int")){
 }
 ```
 
+# Computation time
+
+```{r}
+set.seed(1)
+n <- 100
+p <- 1000
+m <- 3
+data <- list()
+for(i in 1:(m+1)){
+  data[[i]] <- list()
+  data[[i]]$x <- matrix(stats::rnorm(n*p),nrow=n,ncol=p)
+  data[[i]]$y <- stats::rbinom(n=n,size=1,prob=0.5)
+}
+source <- data[1:m]
+names(source) <- paste0("s",1:m)
+target <- data[[m+1]]
+prior <- matrix(stats::rnorm(p*m),nrow=p,ncol=m)
+time <- transreg:::compare(target=target,source=source,z=abs(prior),family="binomial",alpha=1)$time
+paste0(paste0(names(time),": ",round(time/time["glmnet"],digits=2)),collapse=", ")
+```
+
 
 # External applications
 
