--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -414,6 +414,37 @@ target <- data[[m+1]]
 prior <- matrix(stats::rnorm(p*m),nrow=p,ncol=m)
 time <- transreg:::compare(target=target,source=source,z=abs(prior),family="binomial",alpha=1)$time
 paste0(paste0(names(time),": ",round(time/time["glmnet"],digits=2)),collapse=", ")
+
+# trial xrnet
+
+n <- 10100; p <- 1000
+X <- matrix(stats::rnorm(n*p),nrow=n,ncol=p)
+beta <- stats::rnorm(p)*stats::rbinom(n=p,size=1,prob=0.2)
+q <- 3
+prior <- cbind(sample(beta),beta^3,beta) + matrix(stats::rbinom(n=q*p,size=1,prob=0.5)*stats::rnorm(q*p),nrow=p,ncol=q)
+foldid <- rep(c(0,1),times=c(100,10000))
+y <- X %*% beta + stats::rnorm(n)
+y_hat <- list()
+
+test <- compare(target=list(y=y,x=X),foldid.ext=foldid,nfolds.ext=1,prior=prior,family="gaussian",alpha=1,xrnet=TRUE)
+test$deviance
+
+#set.seed(1)
+
+alpha <- 1
+
+glmnet <- glmnet::cv.glmnet(x=X[foldid==0,],y=y[foldid==0],alpha=alpha)
+y_hat$glmnet <- predict(glmnet,newx=X[foldid==1,],s="lambda.min")
+
+transreg <- transreg::transreg(y=y[foldid==0],X=X[foldid==0,],prior=prior,alpha=alpha)
+y_hat$transreg <- predict(transreg,newx=X[foldid==1,])
+
+xrnet <- xrnet::tune_xrnet(x=X[foldid==0,],y=y[foldid==0],external=as.matrix(prior,ncol=1),penalty_main=xrnet::define_penalty(penalty_type=alpha))
+y_hat$xrnet <- xrnet:::predict.tune_xrnet(xrnet,newdata=X[foldid==1,])
+
+sapply(y_hat,function(x) mean((x-y[foldid==1])^2))
+
+
 ```
 
 
